[package]
name = "era"
version = "0.1.0"
authors = ["Fariz Rizaldy (farizrizaldy@icloud.com)"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
